<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ToDoList (R)</string>
    <string name="additionalLoggedOut">Server is online. All data synchronized!</string>
    <string name="additionalLoggedOutOffline">Server was offline. All data LOCAL saved!</string>
    <string name="additionalTodo">ToDo</string>
    <string name="additionalTodoDelete">succuessfully deleted</string>
    <string name="additionalTodoSave">succuessfully saved</string>
    <string name="additionalTodoNoChanges">was NOT saved.</string>
    <string name="additionalWrittenBy">Written by KwoXsaN</string>
    <string name="login_divice_text">Device Timestamp</string>
    <string name="login_hint_download">Internet database was downloaded!</string>
    <string name="login_hint_mail">E-Mail</string>
    <string name="login_hint_pass">Password</string>
    <string name="login_login">Login (Sync)</string>
    <string name="login_login_accepted">Login accepted!</string>
    <string name="login_login_local">Login (Local)</string>
    <string name="login_login_not_accepted">Login not accepted!</string>
    <string name="login_login_server_offline">Server not reachable!</string>
    <string name="login_server_online">Server online!</string>
    <string name="login_server_text">Server Timestamp</string>
    <string name="login_server_offline">Server offline!</string>
    <string name="login_toast">You must set an correct E-Mail!</string>
    <string name="contact_add">Add new contact</string>
    <string name="contact_edit_button">Save contact</string>
    <string name="contact_edit_button_edit">Edit …</string>
    <string name="contact_edit_button_save_entry">A name must be set!</string>
    <string name="contact_edit_email">E-Mail</string>
    <string name="contact_edit_name">Name</string>
    <string name="contact_edit_phone">Telephone</string>
    <string name="contact_item_delete">Delete Contact</string>
    <string name="contact_list_back_button">Add checked to contactlist</string>
    <string name="showContactList">show contacts</string>
    <string name="sendsms">Send SMS</string>
    <string name="sendemail">Send Email</string>
    <string name="sending">Sending …</string>
    <string name="todo_edit_confirm">Save ToDo</string>
    <string name="todo_edit_hint_description">Write what the ToDo is about</string>
    <string name="todo_edit_hint_summary">Summary</string>
    <string name="todo_list_add">Add ToDo</string>
    <string name="todo_list_delete">Delete ToDo</string>
    <string name="todo_list_logout">Logout</string>
    <string name="todo_list_noTodos">Currently there are no Todo items maintained</string>
    <string name="show_contacts_with_todo">Show used contacts …</string>
    <string name="passwort_to_short">Password has to be at least 6 signs long …</string>
    <string name="popup_window_text">Server is NOT online. All data local!</string>
    <string name="popup_window_button">Yes I know!</string>

</resources>