<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="429dp" />

    <TextView
        android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todo_list_noTodos" />
    
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/add"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="0.52"
            android:text="@string/todo_list_add" />

        <Button
            android:id="@+id/logout"
            android:layout_width="107dp"
            android:layout_height="wrap_content"
            android:text="@string/todo_list_logout" />
    </LinearLayout>

</LinearLayout>