<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/listContainer"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/buttonBar"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/entryName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_edit_name"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textSize="12dip" />

        <EditText
            android:id="@+id/entryPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_edit_phone"
            android:numeric="integer"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:textSize="12dip" />

        <EditText
            android:id="@+id/entryEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contact_edit_email"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textSize="12dip" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/saveEntry"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_edit_button" >
        </Button>
    </LinearLayout>

</RelativeLayout>